# notion-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json
src/notion_cli/: __init__.py  client.py  converters.py  formatters.py  main.py
src/notion_cli/commands/: __init__.py  block.py  db.py  page.py  search.py  task.py
tests/: __init__.py  test_formatters.py  test_search.py
